--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/AurelieBayre/pong-reloaded#readme",
   "dependencies": {
+    "eslint": "^4.19.1",
     "express": "^4.16.3"
   }
 }
